core/derive/tests/ui/fail/flush_empty_enum.rs
use ink_core_derive::Flush;

#[derive(Flush, Debug, PartialEq, Eq)]
enum EmptyEnum {}

fn main() {}
